1.完善兼容性问题